--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   </section>
 
   <footer id="footer">
-     <a href=https://www.youtube.com/channel/UCaVEp0GwjUEcLs14BTVhGyw><i class="fa-brands fa-youtube"></a></i> </i> <a href=https://www.instagram.com/veereshtiranga/><i class="fa-brands fa-instagram"></i></a> <a href=https://www.linkedin.com/in/veeresh-tiranga-69b324235/><i class="fa-brands fa-linkedin"></i></a>
+     <a href=https://www.youtube.com/channel/UCaVEp0GwjUEcLs14BTVhGyw><i class="fa-brands fa-youtube"></a></i> </i> <a href=https://www.instagram.com/veeresh__tiranga/><i class="fa-brands fa-instagram"></i></a> <a href=https://www.linkedin.com/in/veeresh-tiranga-69b324235/><i class="fa-brands fa-linkedin"></i></a>
     <p>© Copyright VeereshTiranga</p>
   </footer>
 </body>
